[package]
name = "kernel-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = {version = "1.0.84", features = ["extra-traits", "derive", "full"]}
quote = "1.0.14"
regex = "1.5.4"
proc-macro2 = "1"